<resources>
    <string name="app_name">Measure Attention</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_stroop">Stroop</string>
    <string name="nav_chess">Chess</string>
    <string name="nav_card_game">Card Game</string>
    <string name="nav_test_your_brain">Test your Brain</string>
    <string name="nav_brain_challenge">Brain Challenge</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">

        <!-- add your game name here-->
        <item>Stroop</item>
        <item>Chess</item>
        <item>Card Game</item>
        <item>Test your Brain</item>
        <item>Brain Challenge</item>

        <item>Settings</item><!-- Keep settings in the last always-->
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_local_data">Local Data</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="Local_Data">Local Data</string>

    <!-- Game short description -->
    <string name="detail_stroop">Based on the standard STROOP task, in this game a person has to identify the colour of the text.</string>
    <string name="detail_chess">Based on SPAN task, in this game a person has to recall six objects in the order mentioned.</string>
    <string name="detail_card_game">Based on SPAN task, in this game a person has to recall 5 out of 10 objects shown previously in random order.</string>
    <string name="detail_test_your_brain">Based on the concept of PAIRED CANCELLATION task, in this game a person has to correctly identify the presence of two images in order.</string>
    <string name="detail_brain_challenge">enter detail here</string>

    <!-- The instruction for stroop game-->
    <string name="stroop_ins_L1">Choose the CORRECT COLOR \nfor the given text.</string>

    <!-- The instruction for card game-->
    <string name="card_game_ins_L1">Correctly identify and tap the cards\n that appear for 10 seconds in the next screen</string>
    <string name="card_game_ins_L2">Correctly identify and tap the cards\n that appear for 10 seconds in the next screen</string>
    <string name="card_game_ins_L3">Correctly identify and tap the cards\n that appear for 10 seconds in the next screen</string>
    <string name="card_game_ins_L4">Correctly identify and tap the cards\n that appear for 10 seconds in the next screen</string>

    <!-- The instruction for chess game-->
    <string name="chess_ins_L1">6 types of chess objects shall appear in the screen for 10 seconds.\n Try to remember the \'left to right order\' in which they appear</string>
    <string name="chess_ins_L2">6 types of chess objects shall appear in the screen for 10 seconds.\n Try to remember the \'right to left order\' in which they appear</string>
    <string name="chess_ins_L3">6 types of chess objects shall appear in the screen for 10 seconds.\n Try to remember the \'left to right order\' in which they appear</string>
    <string name="chess_ins_L4">6 types of chess objects shall appear in the screen for 10 seconds.\n Try to remember the \'right to left order\' in which they appear</string>

    <!-- The instruction for test your brain game-->
    <string name="test_your_brain_ins_L1">One image presented in hexagonal shape and three images presented in square shape appear in the screen.\n If the image present in hexagonal shape is present among the images presented in square shapes, tap on the green tick button.\n Otherwise tap on the red cross button.</string>
    <string name="test_your_brain_ins_L2">Two images presented in hexagonal shape and three images presented in square shape appear in the screen.\n If both the images present in hexagonal shape are present among the images presented in square shapes, tap on the green tick button.\n Otherwise tap on the red cross button</string>
    <string name="test_your_brain_ins_L3">Two images presented in hexagonal shape and three images presented in square shape appear in the screen.\n If both the images present in hexagonal shape are present among the images presented in square shapes in “left to right order” tap on the green tick button.\n Otherwise tap on the red cross button.</string>
    <string name="test_your_brain_ins_L4">Two images presented in hexagonal shape and three images presented in square shape appear in the screen.\n If both the images present in hexagonal shape are present among the images presented in square shapes in “right to left order” tap on the green tick button.\n Otherwise tap on the red cross button.</string>
    <string name="test_your_brain_ins_L5">Two images presented in hexagonal shape and three images presented in square shape appear in the screen.\n If both the images present in hexagonal shape are present among the images presented in square shapes in the order indicated by the violet arrow that appears showing left or right randomly on the screen each turn, tap on the green tick button to score.\n Otherwise tap on the red cross button.</string>

    <!-- The instruction for brain challenege game-->
    <string name="brain_challenge_ins_L1">A static image will be presented. Guess the time (in seconds) for which it was displayed.</string>
    <string name="brain_challenge_ins_L2">A figure in motion will be presented. Guess the time (in seconds) for which it was displayed.</string>
    <string name="brain_challenge_ins_L3">A figure in motion will be presented. Guess the time (in seconds) for which it was displayed.</string>
    <string name="brain_challenge_ins_L4">Try to solve the simple mathematical problems that are shown in the screen. \n Once you give the requisite number of corrects answers, further instructions will be provided!</string>
    <string name="brain_challenge_ins_L5">Try to solve the simple mathematical problems that are shown in the screen. \n Once you give the requisite number of corrects answers, further instructions will be provided!</string>

    <!-- local data instruction-->
    <string name="local_data_ins">You can upload your local data here \nif somehow data wont get to the server.</string>
    <string name="local_data_footer_ins"><b>NOTE:</b>\nIf check buttons are unclickable though there is local data, its because the data is getting uploaded in the background try to load the local data again</string>

    <!-- dialogs -->
    <string name="cs">Connecting server...</string>
    <string name="l">Loading...</string>
    <string name="sd">Saving data..</string>
    <string name="cd">Clearing data..</string>

</resources>
